# tusks-lib

./: AGENTS.md  Cargo.toml  functions.csv  functions.md
src/: cli.rs  lib.rs  models.rs  types.rs
src/codegen/: mod.rs
src/codegen/cli/: argument.rs  link.rs  mod.rs  module.rs  node.rs  tusk.rs
src/codegen/cli/handle_matches/: argument.rs  context.rs  link.rs  mod.rs  node.rs  tusk.rs
src/codegen/handle_matches/: mod.rs  module.rs
src/codegen/handle_matches/arms/: function.rs  mod.rs  submodule.rs
src/codegen/mirror/: argument.rs  mod.rs  node.rs  tusk.rs
src/codegen/parameters/: module.rs
src/codegen/preparse/tasks/: functions.rs
src/codegen/tree/: argument.rs  link.rs  mod.rs  node.rs  tusk.rs
src/codegen/util/: attribute.rs  command_attribute.rs  enum_util.rs  link.rs  misc.rs  mod.rs
src/parsing/: argument.rs  attributes.rs  defaults.rs  mod.rs  module.rs  node.rs  parameters.rs  tusk.rs  types.rs
src/parsing/attribute/: models.rs  parse.rs
src/parsing/util/: argument_key_value_attributes.rs  argument_list_attributes.rs  attr.rs  get_attribute_value.rs  mod.rs  types.rs
src/util/: mod.rs  node.rs
src/util/iterator/: links.rs  mod.rs  tusks.rs
